exports[`test Option: checked -- dark theme 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--on pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"0\" class=
    \"pe-button pe-icon-button pe-control__button\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: checked 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--on pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"0\" class=
    \"pe-button pe-icon-button pe-control__button\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: disabled -- dark theme 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--disabled pe-control--inactive pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"-1\" disabled class=
    \"pe-button pe-icon-button pe-button--disabled pe-control__button\">
    <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Off</label>
  </div>
</div>
<div class=
\"pe-control pe-checkbox-control pe-control--on pe-control--disabled pe-control--inactive pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"-1\" disabled class=
    \"pe-button pe-icon-button pe-button--disabled pe-control__button\">
    <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">On</label>
  </div>
</div>
"
`;

exports[`test Option: disabled 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--disabled pe-control--inactive pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"-1\" disabled class=
    \"pe-button pe-icon-button pe-button--disabled pe-control__button\">
    <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Off</label>
  </div>
</div>
<div class=
\"pe-control pe-checkbox-control pe-control--on pe-control--disabled pe-control--inactive pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"-1\" disabled class=
    \"pe-button pe-icon-button pe-button--disabled pe-control__button\">
    <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">On</label>
  </div>
</div>
"
`;

exports[`test Option: events 1`] = `
"<div>
  Checked: false
</div>
<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"0\" class=
    \"pe-button pe-icon-button pe-control__button\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: getState 1`] = `
"<div>
  Checked: false
</div>
<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"0\" class=
    \"pe-button pe-icon-button pe-control__button\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: iconButton (custom hover behaviour) 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"0\" class=
    \"pe-button pe-icon-button pe-control__button\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__wash\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: iconOn, iconOff (custom icon) 1`] = `
"<div style=\"display: flex;\">
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--small\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div tabindex=\"0\" class=
      \"pe-button pe-icon-button pe-control__button\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--small pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--small pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">small</label>
    </div>
  </div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div tabindex=\"0\" class=
      \"pe-button pe-icon-button pe-control__button\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">regular</label>
    </div>
  </div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--medium\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div tabindex=\"0\" class=
      \"pe-button pe-icon-button pe-control__button\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--medium pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--medium pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">medium</label>
    </div>
  </div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--large\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div tabindex=\"0\" class=
      \"pe-button pe-icon-button pe-control__button\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--large pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--large pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">large</label>
    </div>
  </div>
</div>
"
`;

exports[`test Option: label 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"0\" class=
    \"pe-button pe-icon-button pe-control__button\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Label</label>
  </div>
</div>
"
`;

exports[`test Option: selectable (false) 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--inactive pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"-1\" class=
    \"pe-button pe-icon-button pe-button--inactive pe-control__button\">
    <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Never</label>
  </div>
</div>
<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"0\" class=
    \"pe-button pe-icon-button pe-control__button\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Only when
    unchecked</label>
  </div>
</div>
"
`;

exports[`test Option: size 1`] = `
"<div style=\"display: flex;\">
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--small\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div tabindex=\"0\" class=
      \"pe-button pe-icon-button pe-control__button\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--small pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--small pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">small</label>
    </div>
  </div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div tabindex=\"0\" class=
      \"pe-button pe-icon-button pe-control__button\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--regular pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">regular</label>
    </div>
  </div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--medium\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div tabindex=\"0\" class=
      \"pe-button pe-icon-button pe-control__button\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--medium pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--medium pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">medium</label>
    </div>
  </div>
  <div class=
  \"pe-control pe-checkbox-control pe-control--off pe-control--large\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
    <div class=\"pe-control__box\">
      <label class=\"pe-control__form-label\"></label>
      <div tabindex=\"0\" class=
      \"pe-button pe-icon-button pe-control__button\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__content\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple pe-ripple--constrained\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__mask\">
              <label class=\"pe-control__form-label\"></label>
              <div class=\"pe-ripple__waves\">
                <label class=\"pe-control__form-label\"></label>
              </div>
            </div>
          </div>
          <div class=\"pe-button__focus\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=
          \"pe-icon pe-icon--large pe-control__button--on\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=
          \"pe-icon pe-icon--large pe-control__button--off\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
              height=\"24\" viewbox=\"0 0 24 24\">
                <label class=\"pe-control__form-label\"><path d=
                \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
                </path></label>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-control__label\">
      <label class=\"pe-control__form-label\">large</label>
    </div>
  </div>
</div>
"
`;

exports[`test Option: style (colors) 1`] = `
"<div style=\"color: rgb(239, 108, 0);\" class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"0\" class=
    \"pe-button pe-icon-button pe-control__button\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Label</label>
  </div>
</div>
"
`;

exports[`test Option: value 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
<input name=\"worth\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"0\" class=
    \"pe-button pe-icon-button pe-control__button\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Setting the value from outside 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"0\" class=
    \"pe-button pe-icon-button pe-control__button\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Initiator</label>
  </div>
</div>
<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--disabled pe-control--inactive pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"-1\" disabled class=
    \"pe-button pe-icon-button pe-button--disabled pe-control__button\">
    <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Result</label>
  </div>
</div>
"
`;

exports[`test Themed checkbox (color and font size) 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular tests-checkbox-themed-checkbox\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"0\" class=
    \"pe-button pe-icon-button pe-control__button\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Label</label>
  </div>
</div>
"
`;

exports[`test Themed checkbox (colors) -- dark theme 1`] = `
"<div class=
\"pe-control pe-checkbox-control pe-control--off pe-control--regular tests-checkbox-themed-checkbox\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-control__box\">
    <label class=\"pe-control__form-label\"></label>
    <div tabindex=\"0\" class=
    \"pe-button pe-icon-button pe-control__button\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-ripple pe-ripple--constrained\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-ripple__mask\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-ripple__waves\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--on\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\">
              </path></label>
            </svg>
          </div>
        </div>
        <div class=
        \"pe-icon pe-icon--regular pe-control__button--off\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-svg\">
            <label class=\"pe-control__form-label\"></label>
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\">
              <label class=\"pe-control__form-label\"><path d=
              \"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\">
              </path></label>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Label</label>
  </div>
</div>
"
`;
